# Hand_Gesture_Recognition

./: .gitignore  README.md
ArduinoTest/src/: main.cpp
DrawSkin/: C826_analog.cpp  C826_analog.h  CMCI_sound.cpp  CMCI_sound.h  CMakeCache.txt  CMakeLists.txt  DrawSkin.cpp  DrawSkin.sln  DrawSkin.vcxproj  DrawSkin.vcxproj.filters  GLFT_Font.cpp  cmake_install.cmake  shader_utils.cpp  shader_utils.h  stat_helper.cpp  stat_helper.h  text_renderer.h  utils.h
DrawSkin/DrawSkin.dir/Debug/: DrawSkin.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
HandTrackingClient/: CMakeLists.txt  HandTrackingClient.cpp  HandTrackingClient.h  HandTrackingClient.vcxproj  HandTrackingClient.vcxproj.filters  HandTrackingListener.h  HandTrackingMessage.cpp  HandTrackingMessage.h  OpenCVCamera.cpp  OpenCVCamera.h  Threads.cpp  Threads.h  VecMath.cpp  VecMath.h  cmake_install.cmake
vs2010/: DrawSkin.vcxproj  Echo.vcxproj  GesturalApps.sln  HandTrackingClient.vcxproj  Simple3DDemo.vcxproj
